tests/rosetta/out/C/abstract-type.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:14Z
#include <stdio.h>
#include <stdlib.h>

typedef struct Beast Beast;
typedef struct Dog Dog;
typedef struct Cat Cat;

typedef struct Dog {
  char *kind;
  char *name;
} Dog;
typedef struct Cat {
  char *kind;
  char *name;
} Cat;
typedef struct Beast {
  int tag;
  union {
    Dog Dog;
    Cat Cat;
  } value;
} Beast;
#define Beast_Cat 0
#define Beast_Dog 1

const char *beastKind(Beast b) {
  beast_t tmp1 = b;
  int tmp2;
  switch (tmp1.tag) {
  case Beast_Dog:
    const char *k = tmp1.value.Dog.kind;
    const char *_ = tmp1.value.Dog.name;
    tmp2 = k;
    break;
  case Beast_Cat:
    const char *k = tmp1.value.Cat.kind;
    const char *_ = tmp1.value.Cat.name;
    tmp2 = k;
    break;
  default:
    tmp2 = 0;
    break;
  }
  return tmp2;
}

const char *beastName(Beast b) {
  beast_t tmp3 = b;
  int tmp4;
  switch (tmp3.tag) {
  case Beast_Dog:
    const char *_ = tmp3.value.Dog.kind;
    const char *n = tmp3.value.Dog.name;
    tmp4 = n;
    break;
  case Beast_Cat:
    const char *_ = tmp3.value.Cat.kind;
    const char *n = tmp3.value.Cat.name;
    tmp4 = n;
    break;
  default:
    tmp4 = 0;
    break;
  }
  return tmp4;
}

const char *beastCry(Beast b) {
  beast_t tmp5 = b;
  const char *tmp6;
  switch (tmp5.tag) {
  case Beast_Dog:
    const char *_ = tmp5.value.Dog.kind;
    const char *_ = tmp5.value.Dog.name;
    tmp6 = "Woof";
    break;
  case Beast_Cat:
    const char *_ = tmp5.value.Cat.kind;
    const char *_ = tmp5.value.Cat.name;
    tmp6 = "Meow";
    break;
  default:
    tmp6 = NULL;
    break;
  }
  return tmp6;
}

int bprint(Beast b) {
  printf("%s\n", beastName(b) + ", who's a " + beastKind(b) + ", cries: \"" +
                     beastCry(b) + "\".");
}

int main() {
  beast_t d = (Beast){.tag = Beast_Dog,
                      .value.Dog = (Dog){.kind = "labrador", .name = "Max"}};
  beast_t c = (Beast){.tag = Beast_Cat,
                      .value.Cat = (Cat){.kind = "siamese", .name = "Sammy"}};
  bprint(d);
  bprint(c);
}

int main() {
  main();
  return 0;
}
